Fix bug that makes hero image overflow on medium screens

--- a/style.css
+++ b/style.css
@@ -470,7 +470,6 @@ body {
         top: 6rem;
         display: flex;
         column-gap: 2rem;
-        flex-grow: 1;
         padding-inline: 2.4rem;
     }
 
@@ -488,6 +487,7 @@ body {
     .hero-texts {
         padding-inline: 0;
         text-align: left;
+        max-width: 50%;
     }
 
     .hero-texts__heading {
@@ -512,6 +512,7 @@ body {
     .hero-lg-screen-img {
         display: block;
         height: auto;
+        max-width: 50%;
     }
 
     .hero-pattern-left-sm-screen,
